tests/fail/functionDidNotReturn.llcl
/*
error: function did not return
8  |
9  |function main(): Void {
             ^^^^ the compiler cannot guarantee that function 'main' returns
10 |
*/

function main(): Void {

}